--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -22,6 +22,7 @@ body {
     max-width:960px;
     margin: 0 auto;
     padding: 20px;
+    line-height: 1.5;
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--heading-font);
