--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -6,9 +6,9 @@
     --accent1-color: #f8750e;
     --accent2-color: #fff915;
 
-    --heading-font: 'Monserrat', sans-serif;    
-    --paragraph-font: 'Monserrat', sans-serif;
-    
+    --heading-font: 'Monserrat';    
+    --paragraph-font: 'Monserrat';
+
     --nav-background-color: #21075e;
     --nav-link-color: #FFFFFF;
     --hav-hover-link-color: #0091e7;
