--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -6,8 +6,8 @@
     --accent1-color: #FCF300;
     --accent2-color: #FFC600;
 
-    --heading-font: "Montserrat", serif;
-    --paragraph-font: "Montserrat", serif;
+    --heading-font: "Montserrat", sans-serif;
+    --paragraph-font: "Montserrat", sans-serif;
 
     --nav-background-color: #072AC8;
     --nav-link-color: #FFFFFF;
