--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Madimi+One&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 main {
     max-width:840px;
     margin:0 auto;
@@ -92,3 +97,4 @@ blockquote span {
         width: 100%;
     }
 }
+/* Class Selectors */
