Home page enhancement

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,7 @@ main img {
 }
 aside {
     position:relative;
-    width:20rem;
+    width:20em;
     text-align:center;
     margin:0;
     border:1px solid black;
