--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,24 +4,41 @@
     padding: 0;
     box-sizing: border-box;
 }
-main {
-    max-width:840px;
-    margin:0 auto;
+.grid {
+    display:grid;
+    align-items: center;
+}
+main {  
+    grid-column:2/3;  
+    margin:1rem;
 }
 main img {
     float:right;
     width:150px;
     height:auto;
 }
+header, footer, .grid {
+    max-width: 840px;
+    margin: 0 auto;
+}
 aside {
     position:relative;
-    width:20em;
+    width:20rem;
     text-align:center;
     margin:0;
     border:1px solid black;
     padding:5px 10px;
     background-color:#eDedcd;
     color:#000000;
+    grid-column:1/2;
+    grid-row:1/2;
+}
+.box {
+    margin: 1rem;
+    border: 1px solid rgb(0,0,0,.1);
+    padding: 1rem;
+    background-color:#ddd;
+    color:#000;
 }
 aside img {
     width:200px;
@@ -29,8 +46,7 @@ aside img {
 }
 aside h2 {
     position: absolute;
-    top:47px;
-    left:150px;
+    text-align: center;   
 }
 p {
     padding:0;
@@ -47,17 +63,23 @@ body {
 }
 h1 {
     font-family: "Madimi One";
+    border-bottom:1px solid steelblue;
 }
 
 nav {    
-    padding:15px 10px;
-    background:#000000;
+    padding:1rem;
+    background:steelblue;
+    display:flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
-    padding: 15px 25px;
-    color:#FFFFFF;
+    padding: 0.5rem;
+    color:#FFFFFF;    
     text-decoration: none;    
+    font-size: 1.2rem;
+    font-weight:700;
 }
 
 nav a:hover {
@@ -65,13 +87,7 @@ nav a:hover {
     background:#FFFFFF;
 }
 
-.box {
-    margin: 1rem;
-    border: 1px solid rgb(0,0,0,.1);
-    padding: 1rem;
-    background-color:#ddd;
-    color:#000;
-}
+
 
 footer {
     text-align:center;
